Update CalculativeAlgorithm.java